Fix misc client pref bugs
- fixes unpinned popup message not showing
- fixes radio button spacing in client pref dropdown in Zebra

Bug: T351141

--- a/resources/skins.vector.styles/components/Dropdown.less
+++ b/resources/skins.vector.styles/components/Dropdown.less
@@ -82,6 +82,12 @@
 	}
 }
 
+#vector-client-prefs-dropdown {
+	.vector-dropdown-content .mw-list-item {
+		.mixin-vector-dropdown-menu-item();
+	}
+}
+
 /**
  * Dropdown menu items.
  */
